# pid-book

./: .gitignore  .hgignore  LICENSE  Makefile  Model_inversion_demonstration.ipynb  README.md  clean-up-required.txt  conf.py  contents.rst  copy-html.sh  create_permalinks.py  mathjax.py  pid-book.tmproj  preface.tex  pyproject.toml  q-and-a.py  requirements.txt  start_server.py  to-add.txt  version.txt  wingdbstub.py
applications-process-improvement/: design-of-experiment-case-studies.rst  index.rst  process-monitoring.rst  product-development.rst
data-visualization/: aesthetics-style-and-general-tips.rst  bar-plots.rst  box-plots.rst  data-visualization-exercises.rst  data-visualization-in-context.rst  data-visualization.rst  data-visualization.rst.old  index.rst  relational-graphs-scatter-plots.rst  tables-as-a-form-of-data-visualization.rst  time-series-plots.rst
design-analysis-experiments/: blocking-and-confounding-for-disturbances.rst  changing-one-single-variable-at-a-time.rst  design-analysis-experiments-exercises.rst  design-analysis-experiments.rst  examples-of-how-designed-experiments-are-used.rst  experiments-with-a-single-variable-at-two-levels.rst  extended-topics-related-to-designed-experiments.rst  general-approach-for-experimentation-in-industry.rst  general-approach-for-experimentation.rst  index.rst  response-surface-methods.rst  why-learning-about-systems-is-important.rst
latent-variable-modelling/: An R package for LVM.txt  applications-of-latent-variable-models.inc  applications-of-latent-variable-models.rst  extracting-value-from-data.rst  (+10 more)
(+288 files in other folders)
